# agm-render

./: CMakeLists.txt
include/agm/: Camera.hpp  Color.hpp  Geometry.hpp  Light.hpp  Material.hpp  Object.hpp  Ray.hpp  Rectangle.hpp  Render.hpp  Surface.hpp  Util.hpp  Vector.hpp  agm.h
src/: main.cpp
